Surface Synchronization: Fix Mac regression

After Visual Properties ACK (Resize ACK) was moved to the
RenderFrameMetadataObserverClient interface, Mac web content no longer
stuck to the edge of the window. This happened because WindowResizeHelper
didn't see RenderFrameMetadata tasks and so did not schedule them until
AFTER the resize deadline hit.

This CL moves RenderFrameMetadataObserverClient tasks to the
WindowResizeHelper's task_runner thereby fixing resize on Mac.

Bug: 840197, 672962
Change-Id: If4f8a766a2322f1208b6ffccca89c5181f96bf8f
Reviewed-on: https://chromium-review.googlesource.com/1046003
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556432}
Former-commit-id: 20aeb5912ae7b8fdf58e073d948ed347cebcba42